# Puissance-4

./: Affichage  README.md  affichage.py  api.py  client.py  client2.py  client_shell+screen.py  client_shell.py  do.md  jeufonctionel.py  joueur2.py  letter1.pyxres  old_server.py  playable_game_shell.py  server.py  tcp_client.py  text.py  timto_client.py  utils.py
Client graphique/: client.py  letter1.pyxres  letter2.pyxres
Client hacker/: server.py  timto_client.py
src/: client.py  letter2.pyxres  pyproject.toml  timto_client.py
src/utils/: api.py  server.py  utils.py
utils/: api.py  server.py  utils.py
